--- a/drafts/assets/css/admin_panel.css
+++ b/drafts/assets/css/admin_panel.css
@@ -1,3 +1,4 @@
+/* Logout Button */
 .sidebar .nav > li.logout-btn{
     position: absolute;
     width: 100%;
@@ -9,3 +10,14 @@
     opacity: 1;
     color: #FFFFFF;
 }
+
+/* Charts */
+.card .content{
+    padding: 15px 15px 10px 15px;
+}
+
+.chart-pie{
+    padding-left: 15rem;
+}
+
+/* Profile */
