--- a/drafts/assets/css/admin_panel.css
+++ b/drafts/assets/css/admin_panel.css
@@ -1,3 +1,8 @@
+/* Sidebar */
+.sidebar-wrapper{
+    background-color: #004f6d;
+}
+
 /* Logout Button */
 .sidebar .nav > li.logout-btn{
     position: absolute;
@@ -16,8 +21,7 @@
     padding: 15px 15px 10px 15px;
 }
 
-/* Profile */
-.btn{
-    background-color: #004f6d !important;
-    border-color: #004f6d !important;
+/* Space in-between buttons */
+.btn-toolbar>.btn, .btn-toolbar>.btn-group, .btn-toolbar>.input-group{
+    margin-left: 15px;
 }
